# Medical_Research_Agent

./: .gitignore  README.md  main.py  pyproject.toml
backend/: config.py  database.py  init_db.py  langgraph.json  main.py  models.py  pyproject.toml  schema.py  security.py  test_lifespan.py
backend/.langgraph_api/: .langgraph_ops.pckl
backend/ai/: config.py  graph.py  mcp_client.py  state.py  test.py  test_graph.py  vectorstore.py
backend/ai/.langgraph_api/: .langgraph_ops.pckl
backend/ai/nodes/: __init__.py  answer.py  decider.py  ingestion.py  retrieval.py
backend/router/: auth.py  chat.py
backend/tests/: test_chat_helpers.py  test_graph_routing.py  test_ingestion.py  test_retrieval.py  test_security.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ProtectedRoute.jsx
frontend/src/components/chat/: ChatInput.jsx  ChatListItem.jsx  ChatSidebar.jsx  EmptyState.jsx  MainChatArea.jsx  MessageBubble.jsx  MessageList.jsx
frontend/src/components/landing/: CallToAction.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  TopNav.jsx
frontend/src/components/ui/: alert-dialog.jsx  scroll-area.jsx
frontend/src/context/: AuthContext.jsx  ChatContext.jsx
frontend/src/lib/: api.js
frontend/src/pages/: ChatPage.jsx  LandingPage.jsx  Login.jsx  Register.jsx
