[project]
name = "medical-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-google-genai>=4.2.4",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.2.2",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-cli[inmem]>=0.4.27",
    "langsmith>=0.8.8",
    "psycopg>=3.3.4",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
]
